--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-tomcat</artifactId>
-				</exclusion>
-			</exclusions>
+			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -42,10 +36,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -68,7 +58,7 @@
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
 		</dependency>
 
-		<!-- Serialize dates to ISO-8601 -->
+		<!-- Serialize Java 8's LocalDate in ISO-8601 format -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
@@ -91,7 +81,7 @@
 		</plugins>
 	</build>
 
-	<!-- REMOVE THIS WHEN GA IS AVAILABLE -->
+	<!-- REMOVE THIS WHEN GA version IS AVAILABLE -->
 	<repositories>
 		<repository>
 			<id>spring-snapshots</id>
