Added integration test with Resteasy and separated UT and IT with profiles

--- a/pom.xml
+++ b/pom.xml
@@ -46,16 +46,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 
-		<!-- Embedded MongoDB -->
+		<!-- OAuth2 -->
 		<dependency>
-			<groupId>de.flapdoodle.embed</groupId>
-			<artifactId>de.flapdoodle.embed.mongo</artifactId>
+			<groupId>org.springframework.security.oauth</groupId>
+			<artifactId>spring-security-oauth2</artifactId>
 		</dependency>
 
 		<!-- Serialize Java 8's LocalDate in ISO-8601 format -->
@@ -64,10 +59,22 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
 
-		<!-- OAuth2 -->
+		<!-- Testing -->
 		<dependency>
-			<groupId>org.springframework.security.oauth</groupId>
-			<artifactId>spring-security-oauth2</artifactId>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>3.0.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.module</groupId>
+		    <artifactId>jackson-module-kotlin</artifactId>
+		    <scope>test</scope>
 		</dependency>
 
 	</dependencies>
@@ -78,26 +85,127 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			
-<!-- 			<plugin> -->
-<!-- 				<groupId>com.spotify</groupId> -->
-<!-- 				<artifactId>dockerfile-maven-plugin</artifactId> -->
-<!-- 				<version>1.2.2</version> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<id>default</id> -->
-<!-- 						<goals> -->
-<!-- 							<goal>build</goal> -->
-<!-- 						</goals> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 				<configuration> -->
-<!-- 				<repository>docker-images/${project.artifactId}</repository> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
-					
 		</plugins>
 	</build>
+
+	<profiles>
+	
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<dependencies>
+				<!-- Embedded MongoDB -->
+				<dependency>
+					<groupId>de.flapdoodle.embed</groupId>
+					<artifactId>de.flapdoodle.embed.mongo</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+
+		<profile>
+			<id>docker</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+					    <artifactId>maven-surefire-plugin</artifactId>
+					    <configuration>
+					        <skipTests>true</skipTests>
+					    </configuration>
+					</plugin>					
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<configuration>
+							<includes>
+								<include>**/*IT.java</include>
+							</includes>
+						</configuration>
+					</plugin>
+<!-- 					<plugin> -->
+<!-- 						<groupId>io.fabric8</groupId> -->
+<!-- 						<artifactId>docker-maven-plugin</artifactId> -->
+<!-- 						<version>0.21.0</version> -->
+<!-- 						<configuration> -->
+<!-- 							<logDate>default</logDate> -->
+<!-- 							<autoPull>true</autoPull> -->
+<!-- 							<images> -->
+
+<!-- 								<image> -->
+<!-- 									<alias>db</alias> -->
+<!-- 									<name>mongo:3.4</name> -->
+<!-- 									<run> -->
+<!-- 										<wait> -->
+<!-- 											<log>waiting for connections</log> -->
+<!-- 											<time>20000</time> -->
+<!-- 										</wait> -->
+<!-- 										<log> -->
+<!-- 											<prefix>DB</prefix> -->
+<!-- 											<color>yellow</color> -->
+<!-- 										</log> -->
+<!-- 									</run> -->
+<!-- 								</image> -->
+
+<!-- 								<image> -->
+<!-- 									<alias>service</alias> -->
+<!-- 									<name>dserradji/${project.artifactId}:${project.version}</name> -->
+
+<!-- 									<build> -->
+<!-- 										<from>openjdk:8-jdk-alpine</from> -->
+<!-- 										<assembly> -->
+<!-- 											<descriptorRef>artifact</descriptorRef> -->
+<!-- 										</assembly> -->
+<!-- 										<ports> -->
+<!-- 											<port>8080</port> -->
+<!-- 										</ports> -->
+<!-- 										<cmd>java -Djava.security.egd=file:/dev/./urandom -jar -->
+<!-- 											/maven/reactive-customer-service-0.0.1-SNAPSHOT.jar</cmd> -->
+<!-- 									</build> -->
+
+<!-- 									<run> -->
+<!-- 										<ports> -->
+<!-- 											<port>tomcat.port:8080</port> -->
+<!-- 										</ports> -->
+<!-- 										<wait> -->
+<!-- 											<url>http://${docker.host.address}:${tomcat.port}/access</url> -->
+<!-- 											<time>20000</time> -->
+<!-- 										</wait> -->
+<!-- 										<links> -->
+<!-- 											<link>db:db</link> -->
+<!-- 										</links> -->
+<!-- 										<log> -->
+<!-- 											<prefix>TC</prefix> -->
+<!-- 											<color>cyan</color> -->
+<!-- 										</log> -->
+<!-- 									</run> -->
+<!-- 								</image> -->
+<!-- 							</images> -->
+<!-- 						</configuration> -->
+
+<!-- 						<executions> -->
+<!-- 							<execution> -->
+<!-- 								<id>start</id> -->
+<!-- 								<phase>pre-integration-test</phase> -->
+<!-- 								<goals> -->
+<!-- 									<goal>build</goal> -->
+<!-- 									<goal>start</goal> -->
+<!-- 								</goals> -->
+<!-- 							</execution> -->
+<!-- 							<execution> -->
+<!-- 								<id>stop</id> -->
+<!-- 								<phase>post-integration-test</phase> -->
+<!-- 								<goals> -->
+<!-- 									<goal>stop</goal> -->
+<!-- 								</goals> -->
+<!-- 							</execution> -->
+<!-- 						</executions> -->
+<!-- 					</plugin> -->
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 	<!-- REMOVE THIS WHEN GA version IS AVAILABLE -->
 	<repositories>
