--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Print pretty JSON (for humans)
-spring.jackson.serialization.indent_output=true
+spring.jackson.serialization.indent-output=true
 
 # SSL configuration
 server.port=8443
@@ -14,3 +14,10 @@ oauth2.secret=clientSecret
 oauth2.scopes=read,write,read-write
 
 logging.level.org.springframework.security=DEBUG
+
+# Actuator
+management.port=8081
+#management.security.enabled=false
+management.ssl.enabled=false
+
+#spring.data.mongodb.port=27017
