Added tag when the docker image of the service is built

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,6 +10,7 @@ services:
   customers:
     container_name: customers
     build: .
+    image: dserradji/customers:0.0.1
     ports:
       - "8081:8081"
       - "8443:8443"
