--- a/pom.xml
+++ b/pom.xml
@@ -97,24 +97,21 @@
 		</plugin>
 		<!-- Copy the generated jar to the docker directory -->
 		<plugin>
-			<artifactId>maven-resources-plugin</artifactId>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-antrun-plugin</artifactId>
+			<version>1.8</version>
 			<executions>
 				<execution>
-					<id>copy-outputjar</id>
 					<phase>package</phase>
-					<goals>
-						<goal>copy-resources</goal>
-					</goals>
 					<configuration>
-						<outputDirectory>${project.basedir}/docker</outputDirectory>
-						<resources>
-							<resource>
-								<directory>${project.build.directory}</directory>
-								<include>${project.build.finalName}.jar</include>
-								<filtering>false</filtering>
-							</resource>
-						</resources>
+						<target>
+							<copy file="${project.build.directory}/${project.build.finalName}.jar"
+								tofile="${project.basedir}/docker/${project.artifactId}.jar" />
+						</target>
 					</configuration>
+					<goals>
+						<goal>run</goal>
+					</goals>
 				</execution>
 			</executions>
 		</plugin>
