Upgraded to Spring Boot 2.0.0.RC1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.ssl.key-password=qwerty
 
 # OAuth2 credentials
 oauth2.clientId=clientId
-oauth2.secret=clientSecret
+oauth2.secret={noop}clientSecret
 oauth2.scopes=read,write,read-write
 
 logging.level.org.springframework.security=DEBUG
